--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.5.0"
   },
